--- a/AUPSUP_HTML5_SEARCH_HU/webapp/index.html
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/index.html
@@ -7,7 +7,7 @@
 		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
-			data-sap-ui-resourceroots='{"it.alteaup.supplier.portal.searchHU.AUPSUP_HTML5_SEARCH_HU": "./"}'
+			data-sap-ui-resourceroots='{"it.aupsup.searchHU.AUPSUP_HTML5_SEARCH_HU": "./"}'
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
@@ -15,6 +15,6 @@
 		</script>
 	</head>
 	<body class="sapUiBody">
-		<div data-sap-ui-component data-name="it.alteaup.supplier.portal.searchHU.AUPSUP_HTML5_SEARCH_HU" data-id="container" data-settings='{"id" : "AUPSUP_HTML5_SEARCH_HU"}'></div>
+		<div data-sap-ui-component data-name="it.aupsup.searchHU.AUPSUP_HTML5_SEARCH_HU" data-id="container" data-settings='{"id" : "AUPSUP_HTML5_SEARCH_HU"}'></div>
 	</body>
 </html>
