--- a/AUPSUP_HTML5_SEARCH_HU/webapp/test/unit/unitTests.qunit.html
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/test/unit/unitTests.qunit.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unit tests for it.aupsup.searchHU.AUPSUP_HTML5_SEARCH_HU</title>
+	<title>Unit tests for it.aupsup.searchHU</title>
 
 	<script id="sap-ui-bootstrap"
 		src="../../../resources/sap-ui-core.js"
