--- a/AUPSUP_HTML5_CONTRACTS/webapp/test/integration/opaTests.qunit.html
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/test/integration/opaTests.qunit.html
@@ -8,7 +8,7 @@
 		src="../../../resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_fiori_3"
 		data-sap-ui-resourceroots='{			
-			"it.aupsup.contracts.AUPSUP_HTML5_CONTRACTS": "../../"			
+			"it.aupsup.purchords": "../../"			
 		}'
 		data-sap-ui-animation="false"
 		data-sap-ui-compatVersion="edge"
