--- a/AUPSUP_HTML5_CONTRACTS/webapp/test/unit/unitTests.qunit.html
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/test/unit/unitTests.qunit.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unit tests for it.aupsup.contracts.AUPSUP_HTML5_CONTRACTS</title>
+	<title>Unit tests for it.aupsup.purchords</title>
 
 	<script id="sap-ui-bootstrap"
 		src="../../../resources/sap-ui-core.js"
 		data-sap-ui-resourceroots='{
-			"it/aupsup/contracts/AUPSUP_HTML5_CONTRACTS": "../../"			
+			"it/aupsup/purchords": "../../"			
 		}'>
 	</script>
 
